--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@hapi/joi": "^16.1.7",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-pwa": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
+    "axios": "^0.18.0",
+    "mint-ui": "^2.2.13",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
