--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/hapi__joi": "^15.0.4",
     "core-js": "^2.6.5",
+    "pug": "^2.0.4",
+    "pug-parser": "^5.0.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
