--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/hapi__joi": "^15.0.4",
     "core-js": "^2.6.5",
+    "element-ui": "^2.12.0",
     "pug": "^2.0.4",
     "pug-parser": "^5.0.1",
     "pug-plain-loader": "^1.0.0",
@@ -32,6 +33,7 @@
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
